[INIT] update